--- a/libsrc/bootsequence/CMakeLists.txt
+++ b/libsrc/bootsequence/CMakeLists.txt
@@ -5,13 +5,16 @@ SET(CURRENT_SOURCE_DIR ${CMAKE_SOURCE_DIR}/libsrc/bootsequence)
 
 # Group the headers that go through the MOC compiler
 SET(BootsequenceQT_HEADERS
-		${CURRENT_HEADER_DIR}/RainbowBootSequence.h
+		${CURRENT_SOURCE_DIR}/RainbowBootSequence.h
 )
 
 SET(BootsequenceHEADERS
+		${CURRENT_HEADER_DIR}/BootSequence.h
+		${CURRENT_HEADER_DIR}/BootSequenceFactory.h
 )
 
 SET(BootsequenceSOURCES
+		${CURRENT_SOURCE_DIR}/BootSequenceFactory.cpp
 		${CURRENT_SOURCE_DIR}/RainbowBootSequence.cpp
 )
 
