Added HyperCon to deploy directory. Sorted leds to start at led-nr zero. Changed default integration depth of horizontal leds.
Former-commit-id: 67b38ceea032de0105daadd4bcda99cd458fb15f

--- a/src/config-tool/ConfigTool/build.xml
+++ b/src/config-tool/ConfigTool/build.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <project default="main" basedir=".">
- 	<property name="deploy.dir"  value="${basedir}/deploy" />
+ 	<property name="deploy.dir"  value="${basedir}/../../../deploy" />
     
  	<target name="main" depends="make_deploy_dir, build" description="Build HyperCon, the Hyperion configuration file builder" />
  		
@@ -15,10 +15,6 @@
 		
 		<move file="HyperCon.jar" todir="${deploy.dir}" />
  	</target>
- 	
-	<target name="clear">
-		<delete dir="{deploy.dir}"   quiet="true" />
-    </target>
 
  	<target name="make_deploy_dir">
  	    <mkdir dir="${deploy.dir}" />
