spidev_test.c added to test apps
Former-commit-id: 5495ef7d36727327954f46475b79b1ac55749770

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -39,3 +39,5 @@ add_executable(test_blackborderprocessor
 		TestBlackBorderProcessor.cpp)
 target_link_libraries(test_blackborderprocessor
 		hyperion)
+
+add_executable(spidev_test spidev_test.c)
