remove additional commandline argument
Former-commit-id: 12245d8b5670dbdffd9945665fbe338e99799cc8

--- a/bin/hyperion.conf
+++ b/bin/hyperion.conf
@@ -12,5 +12,5 @@ pre-start script
 modprobe spidev 
 end script
 
-exec /usr/bin/hyperiond /etc/hyperion.config.json /home/pi/hyperiond.out
+exec /usr/bin/hyperiond /etc/hyperion.config.json
 
