Proto server added for better performance of remote application using a binary protocol; gpio2spi added which can be used to switch the GPIO pins into SPI mode if necessary;
Former-commit-id: 237f495289ce2f4afae49b36684f464937dbd30f

--- a/libsrc/CMakeLists.txt
+++ b/libsrc/CMakeLists.txt
@@ -7,5 +7,6 @@ add_subdirectory(bootsequence)
 add_subdirectory(dispmanx-grabber)
 add_subdirectory(hyperion)
 add_subdirectory(jsonserver)
+add_subdirectory(protoserver)
 add_subdirectory(utils)
 add_subdirectory(xbmcvideochecker)
