added gpio2spi to launch configuration script
Former-commit-id: ab99d21d851a38836ea2e9f69c30eab19b4620d9

--- a/deploy/hyperion.conf
+++ b/deploy/hyperion.conf
@@ -3,13 +3,14 @@
 description "hyperion"
 author "poljvd & tvdzwan"
 
-start on (started xbmc)
+start on (runlevel [2345])
 stop on (runlevel [!2345])
 
 respawn
 
 pre-start script
 modprobe spidev 
+/usr/bin/gpio2spi
 end script
 
 exec /usr/bin/hyperiond /etc/hyperion.config.json
