Fixed generation of device config type string
Former-commit-id: ec245b9fae3f2bae690e985657807389770539d9

--- a/config/hyperion.config.json
+++ b/config/hyperion.config.json
@@ -13,7 +13,7 @@
 	"device" :
 	{
 		"name"       : "MyPi",
-		"type"       : "WS2801",
+		"type"       : "ws2801",
 		"output"     : "/dev/spidev0.0",
 		"rate"       : 1000000,
 		"bgr-output" : false
