--- a/config/hyperion.config.json
+++ b/config/hyperion.config.json
@@ -21,13 +21,17 @@
 
 	/// Color manipulation configuration used to tune the output colors to specific surroundings. Contains the following fields:
 	///  * 'hsv' : The manipulation in the Hue-Saturation-Value color domain with the following tuning parameters:
-	///            - 'saturationGain' The gain adjustement of the saturation
-	///            - 'valueGain'      The gain adjustement of the value
+	///            - 'saturationGain'  The gain adjustement of the saturation
+	///            - 'valueGain'       The gain adjustement of the value
 	///  * 'red'/'green'/'blue' : The manipulation in the Red-Green-Blue color domain with the following tuning parameters for each channel:
-	///            - 'threshold'  The minimum required input value for the channel to be on (else zero)
-	///            - 'gamma'      The gamma-curve correction factor
-	///            - 'blacklevel' The lowest possible value (when the channel is black)
-	///            - 'whitelevel' The highest possible value (when the channel is white)
+	///            - 'threshold'       The minimum required input value for the channel to be on (else zero)
+	///            - 'gamma'           The gamma-curve correction factor
+	///            - 'blacklevel'      The lowest possible value (when the channel is black)
+	///            - 'whitelevel'      The highest possible value (when the channel is white)
+	///  * 'smoothing' : Smoothing of the colors in the time-domain with the following tuning parameters:
+	///            - 'type'            The type of smoothing algorithm ('linear' or 'none')
+	///            - 'time_ms'         The time constant for smoothing algorithm in milliseconds
+	///            - 'updateFrequency' The update frequency of the leds in Hz
 	"color" :
 	{
 		"hsv" :
@@ -55,6 +59,12 @@
 			"gamma"      : 2.0000,
 			"blacklevel" : 0.0000,
 			"whitelevel" : 1.0000
+		},
+		"smoothing" :
+		{
+			"type"            : "none",
+			"time_ms"         : 200,
+			"updateFrequency" : 20.0000
 		}
 	},
 
