Added the option to specify the color byte order
Former-commit-id: f911d0f26c25345bbe5e9014fbc31568b7386f08

--- a/config/hyperion.config.json
+++ b/config/hyperion.config.json
@@ -16,7 +16,7 @@
         "type"       : "ws2801",
         "output"     : "/dev/spidev0.0",
         "rate"       : 1000000,
-        "bgr-output" : false
+        "colorOrder" : "rgb"
     },
 
     /// Color manipulation configuration used to tune the output colors to specific surroundings. Contains the following fields:
