Added the option to specify the color byte order
Former-commit-id: 4ec3f869fbee70779c44752cdd5d1021657baec2

--- a/config/hyperion.config.json
+++ b/config/hyperion.config.json
@@ -9,7 +9,7 @@
     ///                  - 'ws2801' this is the device (eg '/dev/spidev0.0')
     ///                  - 'test' this is the file used to write test output (eg '/home/pi/hyperion.out')
     /// * 'rate'       : The baudrate of the output to the device (only applicable for 'ws2801')
-    /// * 'bgr-output' : Use BGR output instead of RGB (reverse red and blue).
+    /// * 'colorOrder' : The order of the color bytes ('rgb', 'rbg', 'bgr', etc.).
     "device" :
     {
         "name"       : "MyPi",
