rename of lpd6803 device to fix typo
Former-commit-id: 4c2b92f51d1903122211e3e91ce876697ea57526

--- a/config/hyperion.config.json
+++ b/config/hyperion.config.json
@@ -4,7 +4,7 @@
 {
     /// Device configuration contains the following fields:
     /// * 'name'       : The user friendly name of the device (only used for display purposes)
-    /// * 'type'       : The type of the device or leds (known types for now are 'ws2801', 'ldp6803', 'test' and 'none')
+    /// * 'type'       : The type of the device or leds (known types for now are 'ws2801', 'lpd6803', 'test' and 'none')
     /// * 'output'     : The output specification depends on selected device
     ///                  - 'ws2801' this is the device (eg '/dev/spidev0.0')
     ///                  - 'test' this is the file used to write test output (eg '/home/pi/hyperion.out')
