--- a/libsrc/CMakeLists.txt
+++ b/libsrc/CMakeLists.txt
@@ -8,5 +8,6 @@ add_subdirectory(dispmanx-grabber)
 add_subdirectory(hyperion)
 add_subdirectory(jsonserver)
 add_subdirectory(protoserver)
+add_subdirectory(boblightserver)
 add_subdirectory(utils)
 add_subdirectory(xbmcvideochecker)
