--- a/config/hyperion.config.json
+++ b/config/hyperion.config.json
@@ -60,12 +60,12 @@
 			"blacklevel" : 0.0000,
 			"whitelevel" : 1.0000
 		},
-		"smoothing" :
-		{
-			"type"            : "linear",
-			"time_ms"         : 200,
-			"updateFrequency" : 20.0000
-		}
+//		"smoothing" :
+//		{
+//			"type"            : "linear",
+//			"time_ms"         : 200,
+//			"updateFrequency" : 20.0000
+//		}
 	},
 
 	/// The configuration for each individual led. This contains the specification of the area 
@@ -386,14 +386,14 @@
 	///  * port : Port at which the protobuffer server is started
 	"protoServer" :
 	{
-		"port" : 19444
+		"port" : 19445
 	},
 
 	/// The configuration of the boblight server which enables the boblight remote interface
 	///  * port : Port at which the boblight server is started
 //	"boblightServer" :
 //	{
-//		"port" : 19444
+//		"port" : 19333
 //	},
 
 	"end-of-json" : "end-of-json"
