--- a/config/hyperion.config.json
+++ b/config/hyperion.config.json
@@ -60,12 +60,12 @@
 			"blacklevel" : 0.0000,
 			"whitelevel" : 1.0000
 		},
-//		"smoothing" :
-//		{
-//			"type"            : "linear",
-//			"time_ms"         : 200,
-//			"updateFrequency" : 20.0000
-//		}
+		"smoothing" :
+		{
+			"type"            : "none",
+			"time_ms"         : 200,
+			"updateFrequency" : 20.0000
+		}
 	},
 
 	/// The configuration for each individual led. This contains the specification of the area 
