--- a/config/hyperion.config.json
+++ b/config/hyperion.config.json
@@ -4,10 +4,10 @@
 {
 	/// Device configuration contains the following fields: 
 	/// * 'name'       : The user friendly name of the device (only used for display purposes)
-	/// * 'type'       : The type of the device or leds (known types for now are 'ws2801', 'lpd6803', 'sedu', 'test' and 'none')
-	/// * 'output'     : The output specification depends on selected device
-	///                  - 'ws2801' this is the device (eg '/dev/spidev0.0 or /dev/ttyS0')
-	///                  - 'test' this is the file used to write test output (eg '/home/pi/hyperion.out')
+	/// * 'type'       : The type of the device or leds (known types for now are 'ws2801', 'lpd6803', 'sedu',
+	///                  'adalight', 'test' and 'none')
+	/// * 'output'     : The output specification depends on selected device. This can for example be the
+	///                  device specifier or the output file name
 	/// * 'rate'       : The baudrate of the output to the device
 	/// * 'colorOrder' : The order of the color bytes ('rgb', 'rbg', 'bgr', etc.).
 	"device" :
@@ -15,7 +15,7 @@
 		"name"       : "MyPi",
 		"type"       : "ws2801",
 		"output"     : "/dev/spidev0.0",
-		"rate"       : 1000000,
+		"rate"       : 500000,
 		"colorOrder" : "rgb"
 	},
 
