--- a/test/dispmanx2png/CMakeLists.txt
+++ b/test/dispmanx2png/CMakeLists.txt
@@ -4,7 +4,7 @@ find_package(BCM REQUIRED)
 include_directories(${BCM_INCLUDE_DIRS})
 
 # Configure the use of QT4
-find_package(Qt4 COMPONENTS QtTest REQUIRED QUIET)
+#find_package(Qt4 COMPONENTS QtTest REQUIRED QUIET)
 include(${QT_USE_FILE})
 add_definitions(${QT_DEFINITIONS})
 link_directories(${CMAKE_FIND_ROOT_PATH}/lib/arm-linux-gnueabihf)
@@ -15,4 +15,5 @@ add_executable(dispmanx2png
 
 target_link_libraries(dispmanx2png
 		dispmanx-grabber
+		getoptPlusPlus
 		${QT_LIBRARIES})
