new binaries uploaded
Former-commit-id: dacb21f1b3e77d83c4dac4286cebfa6075af7a9e

--- a/config/hyperion.config.json
+++ b/config/hyperion.config.json
@@ -4,10 +4,10 @@
 {
 	/// Device configuration contains the following fields: 
 	/// * 'name'       : The user friendly name of the device (only used for display purposes)
-	/// * 'type'       : The type of the device or leds (known types for now are 'ws2801', 'lpd6803', 'sedu',
-	///                  'adalight', 'test' and 'none')
+	/// * 'type'       : The type of the device or leds (known types for now are 'ws2801', 'ldp8806',
+	///                  'lpd6803', 'sedu', 'adalight', 'lightpack', 'test' and 'none')
 	/// * 'output'     : The output specification depends on selected device. This can for example be the
-	///                  device specifier or the output file name
+	///                  device specifier, device serial number, or the output file name
 	/// * 'rate'       : The baudrate of the output to the device
 	/// * 'colorOrder' : The order of the color bytes ('rgb', 'rbg', 'bgr', etc.).
 	"device" :
